Version 3.3.0 (???):
  - Bugfix: get_*_property() convenience functions were declared but not defined.
  - New: Unstable/ for work-in-progress APIs
  - New: local topology helper classes in Unstable/Topology/:
        - Consistent local entity labeling
        - TetTopology and TriangleTopology
  - New: std::hash specialization for handle types, so they can be used in std::unordered_map

Version 3.2.2 (2022-10-13):
  - Add various convenience property convenience functions, e.g.
        - `mesh.create_{shared, persistent, private}_{vertex, edge, ...}_property()`
        - `mesh.get_{vertex, edge, ...}_property()`
  - Un-deprecate other convenience functions, e.g. mesh.clear_{vertex, ...}_props()
  - (Fix some compiler warnings)

Version 3.2.1 (2022-08-18):
  - Fix OVMB float endianness (#43)

Version 3.2.0 (2022-07-29):
  - Feature: add new `find_halfface_in_cell(VH,VH,CH)` function to TopologyKernel
  - Feature: add new `find_halfedge_in_cell(vector<VH>,CH)` function to TopologyKernel
  - Feature: Move get_halfface_vertices from Tet-TopoKernel to general TopologyKernel
  - Improvement: Rename half{face,edge}*() to find_half{face,edge}*(), deprecate old APIs

Version 3.1.1 (2022-07-29):
  - Fix OVMB property codec names for Eigen float matrices (was "d" instead of "f").
    Files that were saved with float matrices are unfortunately unreadable and need to be manually fixed.


Version 3.1.0 (2022-06-28):
  - Features:
    - Implement mesh copy assignment
  - Improvements:
    - Add basic tests for attributes
    - Make all Attribs assignable (use pointer instead of reference)
    - Insert missing OVM_EXPORT in BoundaryItemIter
  - Bugfixes:
    - Fix CellFaceIter:operator--() wraparound bug

Version 3.0.5 (2022-06-17):
  - Safe copy construction for meshes:
    After removal of copy/move constructors/assignments in 3.0.3, after
    we discovered dangerous bugs in property handling, this release